--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/assets/fields.css">
   <link rel="stylesheet" href="/assets/iconfont.css">
+  <link rel="stylesheet" href="https://unpkg.com/ngx-bootstrap/datepicker/bs-datepicker.css">
+  <link rel="stylesheet" href="/assets/image-viewer.css">
 </head>
 
 <body>
